--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,5 +17,5 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Deploy app using docker-compose
-      run: docker-compose up -d --build
+      run: docker compose up -d --build
     
